--- a/asdfghjkl/asdfghjkl.css
+++ b/asdfghjkl/asdfghjkl.css
@@ -11,11 +11,11 @@ button#Title {
   width: 150px;
   font-size: 20px;
   background-color: #FFFFFF;
-  border: 2px solid #DEDEDE;
-  color: #BCBCBC;
+  border: 2px solid #BCBCBC;
+  color: #676767;
 }
 button.Actions {
-  background-color: #FFCC00;
+  background-color: #F9EC54;
 }
 button.Upgrades {
   background-color: #9BFF70;
@@ -64,6 +64,7 @@ div#Title {
 }
 div.firstLine {
   top: 10px;
+  height: 200px;
 }
 div#Actions  {
   left: 43%;
